update website styles

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <!-- Masthead-->
         
-        <div class="container-fluid position-relative overflow-hidden" id="home">
+        <div class="container-fluid position-relative overflow-hidden mt-5 mt-xl-0" id="home">
             <div class="row justify-content-center">
 
                 <div class="position-absolute" id="waves-text">
@@ -245,29 +245,31 @@
       </section>
 </div>
 
-<div class="col-12 position-relative">
+<div class="col-12 position-relative overflow-hidden">
     <h4 class="text-center my-5 display-4">Getting Started</h4>
     <section class="position-relative">
         <div class="container py-5">
 
 
-            <div class="col-12 text-center">
-                <h4>Spin Up the MLCenter Server</h4>
+            <div class="col-12 text-center position-relative">
+                <h4>Spin up your MLCenter Server</h4>
                 <iframe
-                src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=monokai&wt=none&l=application%2Fx-sh&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=git%2520clone%2520https%253A%252F%252Fgithub.com%252Fmlcenter-org%252Fmlcenter-server.git%250A%250Acd%2520mlcenter-server%250A%250Adocker-compose%2520-f%2520local.yaml%2520up%2520-d%250A%250A%2523%2520open%2520http%253A%252F%252Flocalhost%253A8000%2520and%2520sigup%2520for%2520an%2520account%252C%2520after%2520that%2520just%2520grab%2520the%2520activation%2520link%2520from%2520the%2520logs%252C%2520unless%2520you%2520want%2520to%2520configure%2520the%2520variables%2520for%2520the%2520SMTP%2520servers%2520and%2520get%2520the%2520email%2520stright%2520to%2520your%2520email%2520address%250A"
-                style="width: 1024px; height: 457px; border:0; transform: scale(1); overflow:hidden;"
-                sandbox="allow-scripts allow-same-origin">
-                </iframe>
+                src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C0%29&t=monokai&wt=none&l=application%2Fx-sh&width=1045&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=git%2520clone%2520https%253A%252F%252Fgithub.com%252Fmlcenter-org%252Fmlcenter-server.git%250A%250Acd%2520mlcenter-server%250A%250Adocker-compose%2520-f%2520local.yaml%2520up%2520-d%250A%250A%2523%2520open%2520http%253A%252F%252Flocalhost%253A8000%2520and%2520sigup%2520for%2520an%2520account%252C%2520after%2520that%2520just%2520grab%2520the%2520activation%2520link%2520from%2520the%2520logs%252C%2520unless%2520you%2520want%2520to%2520configure%2520the%2520variables%2520for%2520the%2520SMTP%2520servers%2520and%2520get%2520the%2520email%2520stright%2520to%2520your%2520email%2520address%250A"
+                class="carbon-iframe"
+                sandbox="allow-scripts allow-same-origin allow-modal"
+                >
+              </iframe>
             </div>
 
 
-            <div class="col-12 text-center">
+            <div class="col-12 text-center position-relative">
                 <h4>Install the python package</h4>
                 <iframe
-                    src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C1%29&t=monokai&wt=none&l=python&width=680&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=true&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520pip%2520install%2520mlcenter%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%250A%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520%2520"
-                    style="width: 1024px; height: 473px; border:0; transform: scale(1); overflow:hidden;"
-                    sandbox="allow-scripts allow-same-origin">
-                    </iframe>
+                src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C0%29&t=monokai&wt=none&l=python&width=541&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=pip%2520install%2520mlcenter%250A"
+                class="carbon-iframe"
+                sandbox="allow-scripts allow-same-origin allow-modal"
+                >
+              </iframe>
             </div>
 
 
@@ -344,7 +346,7 @@
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r68/three.min.js"></script>
-        <!-- Core theme JS-->
+        <script src="js/jquery363.min.js"></script>
         <script src="js/scripts.js"></script>
     </body>
 </html>
