update homepage desing

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       </section>
 </div>
 
-<div class="col-12 position-relative overflow-hidden">
+<div class="col-12 position-relative overflow-hidden d-none d-xl-block">
     <h4 class="text-center my-5 display-4">Getting Started</h4>
     <section class="position-relative">
         <div class="container py-5">
@@ -302,7 +302,7 @@
 
         <footer class="container-fluid py-5 mt-5">
             <div class="row">
-              <div class="col-12 col-lg-3 col-xl-2 pt-0">
+              <div class="col-12 col-lg-3 col-xl-2 pt-0 mx-auto">
                 <a class="navbar-brand text-dark text-decoration-none my-0 py-0" href="http://mlcenter.org">
                     <div id="logo">
                         <span class="part-1">ML</span>
@@ -311,7 +311,7 @@
                 </a>
               </div>
 
-              <div class="col-6 col-lg-3 col-xl-2 ">
+              <div class="col-12 mx-auto text-center">
                 <h5>Navigation</h5>
                 <ul class="list-unstyled text-small">
 
