--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <!-- Masthead-->
         
-        <div class="container-fluid position-relative overflow-hidden mt-5 mt-xl-0" id="home">
+        <div class="container-fluid position-relative overflow-hidden mt-5 mt-xl-0 pt-5 pt-xl-0" id="home">
             <div class="row justify-content-center">
 
                 <div class="position-absolute" id="waves-text">
