add bg white to nav only after scroll

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
 
-        <nav class="navbar navbar-expand-lg bg-white fixed-top">
+        <nav class="navbar navbar-expand-lg fixed-top" id="navbar">
             <div class="container-fluid">
                 <a class="navbar-brand text-dark text-decoration-none ms-0 ms-xl-3" href="http://mlcenter.org">
                     <div id="logo">
@@ -256,7 +256,7 @@
                 <iframe
                 src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C0%29&t=monokai&wt=none&l=application%2Fx-sh&width=1045&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=git%2520clone%2520https%253A%252F%252Fgithub.com%252Fmlcenter-org%252Fmlcenter-server.git%250A%250Acd%2520mlcenter-server%250A%250Adocker-compose%2520-f%2520local.yaml%2520up%2520-d%250A%250A%2523%2520open%2520http%253A%252F%252Flocalhost%253A8000%2520and%2520sigup%2520for%2520an%2520account%252C%2520after%2520that%2520just%2520grab%2520the%2520activation%2520link%2520from%2520the%2520logs%252C%2520unless%2520you%2520want%2520to%2520configure%2520the%2520variables%2520for%2520the%2520SMTP%2520servers%2520and%2520get%2520the%2520email%2520stright%2520to%2520your%2520email%2520address%250A"
                 class="carbon-iframe"
-                sandbox="allow-scripts allow-same-origin allow-modal"
+
                 >
               </iframe>
             </div>
@@ -267,7 +267,7 @@
                 <iframe
                 src="https://carbon.now.sh/embed?bg=rgba%28255%2C255%2C255%2C0%29&t=monokai&wt=none&l=python&width=541&ds=true&dsyoff=20px&dsblur=68px&wc=true&wa=false&pv=56px&ph=56px&ln=false&fl=1&fm=Hack&fs=14px&lh=133%25&si=false&es=2x&wm=false&code=pip%2520install%2520mlcenter%250A"
                 class="carbon-iframe"
-                sandbox="allow-scripts allow-same-origin allow-modal"
+
                 >
               </iframe>
             </div>
